--- a/profile.html
+++ b/profile.html
@@ -304,6 +304,16 @@
 
     </div>
 
+            <!-- Footer -->
+            <div class="container ">
+              <div class="row">
+                <div class="col-12 d-flex justify-content-center mb-4 footer">
+                  <span>Developed by <a target="_blank" href="https://www.linkedin.com/in/faisal-al-thuwaini/">Faisal Althuwaini</a></span>
+                </div>
+              </div>
+            </div>
+    
+
     <!-- SCRIPT -->
     <script src="/script.js"></script>
     
